force-app/main/default/objects/Community__c/fields/BCM_Approver__c.field-meta.xml
<CustomField>
    <fullName>BCM_Approver__c</fullName>
    <label>Bcm Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>