force-app/main/default/objects/Community__c/fields/BFM_Email__c.field-meta.xml
<CustomField>
    <fullName>BFM_Email__c</fullName>
    <label>Bfm Email</label>
    <type>Email</type>
</CustomField>