force-app/main/default/objects/Community__c/fields/Document_Naming__c.field-meta.xml
<CustomField>
    <fullName>Document_Naming__c</fullName>
    <label>Document Naming</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EJARI</fullName>
            </value>
            <value>
                <fullName>Tawtheeq</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>