force-app/main/default/objects/Community__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CyberSource</fullName>
            </value>
            <value>
                <fullName>Razorpay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>