force-app/main/default/objects/Community__c/fields/Security_Email__c.field-meta.xml
<CustomField>
    <fullName>Security_Email__c</fullName>
    <label>Security Email</label>
    <type>Email</type>
</CustomField>